# ssifSource

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _directshow_grabber.cpp  _several_files.cpp  _several_files.h  appveyor.yml  configure.bat  coreavc_usage.cpp  coreavc_usage.h  cropdetect.cpp  cropdetect.sln  cropdetect.vcproj  cropdetect.vcxproj  directshow_grabber.h  dllmain.cpp  dump_filter.cpp  example.avs  grabber.cpp  grabber.h  graph_creation.cpp  graph_creation.h  intel_usage.cpp  intel_usage.h  ldecod_usage.cpp  ldecod_usage.h  left.avs  main.cpp  mpls_parse.cpp  mpls_parse.h  mpls_source.cpp  mpls_source.h  parse_mpls.c  parse_mpls.cpp  parse_mpls.h  pipe_tools.cpp  pipe_tools.h  resource.rc  (+19 more)
AvsTools/: CMakeLists.txt  Filter.AdjustedColorDifference.cpp  Filter.AdjustedColorDifference.hpp  Filter.CropDetect.cpp  Filter.CropDetect.hpp  Filter.HistogramMatching.cpp  Filter.HistogramMatching.hpp  Filter.Pipe.cpp  Filter.Pipe.hpp  Filter.RestoreAlpha.cpp  Filter.RestoreAlpha.hpp  Filter.SequentialToSeekable.cpp  Filter.SequentialToSeekable.hpp  Filter.SetLogger.cpp  Filter.SetLogger.hpp  Filter.VideoCorrelation.cpp  Filter.VideoCorrelation.hpp  Tools.AviSynth.Frame.cpp  Tools.AviSynth.Frame.hpp  Tools.AviSynth.cpp  Tools.AviSynth.hpp  Tools.HistogramMatching.cpp  Tools.HistogramMatching.hpp  Tools.Motion.cpp  Tools.Motion.hpp  Tools.Pipe.cpp  Tools.Pipe.hpp  Tools.WinApi.cpp  Tools.WinApi.hpp  common.h  stdafx.h
BaseClasses/: BaseClasses.vcxproj  BaseClasses.vcxproj.filters
CoreAVCWrapper/: CMakeLists.txt  CoreAVCWrapper.def  CoreAVCWrapper.vcxproj  dllmain.cpp
FilmTester/: CMakeLists.txt  filmtester.cpp
LoadHelper/: CMakeLists.txt  loadhelper.cpp
Sub3D/: CMakeLists.txt  Filter.SRTRenderer.cpp  Filter.SRTRenderer.hpp  Filter.XMLRenderer.cpp  Filter.XMLRenderer.hpp  Tools.Depth.cpp  Tools.Depth.hpp  Tools.Lua.cpp  Tools.Lua.hpp  Tools.Motion.cpp  Tools.Motion.hpp  dialogs.res  dllmain.cpp  donate-info.bat  resource.h  stdafx.h  sub3d-2.avs  sub3d-3.avs  sub3d-old.lua  sub3d.avs  sub3d.lua  sub3d.mingw.def  sub3d.rc  tools3d.avsi
Tests/: CMakeLists.txt  VideoCorrelation.Test.cpp  main.cpp  tests.hpp
TextDecode/: .gitignore  CMakeLists.txt  demo.avs  dllmain.cpp  gen_img.sh  mainfilter.cpp  mainfilter.h  result_0017512.txt  test.avs
_vs/: .gitignore  ssifSource.sln
_vs/AvsTools/: AvsTools.vcxproj  AvsTools.vcxproj.filters
_vs/BaseClasses/: BaseClasses.vcxproj  BaseClasses.vcxproj.filters
_vs/CoreAVCWrapper/: CoreAVCWrapper.vcxproj  CoreAVCWrapper.vcxproj.filters
_vs/FilmTester/: FilmTester.vcxproj  FilmTester.vcxproj.filters
_vs/LoadHelper/: LoadHelper.vcxproj  LoadHelper.vcxproj.filters
_vs/Lua/: Lua.vcxproj  Lua.vcxproj.filters
_vs/MpegSplitter/: MpegSplitter.vcxproj  MpegSplitter.vcxproj.filters
_vs/Sub3D/: Sub3D.vcxproj  Sub3D.vcxproj.filters  version.h
_vs/ldecod/: ldecod.vcxproj  ldecod.vcxproj.filters
_vs/libudfread/: libudfread.vcxproj  libudfread.vcxproj.filters
_vs/libufileread/: libufileread.vcxproj  libufileread.vcxproj.filters
_vs/ssifSource/: ssifSource.vcxproj  ssifSource.vcxproj.filters  version.h
_vs/tinyxml2/: tinyxml2.vcxproj  tinyxml2.vcxproj.filters
autocropper/: autocropper.cpp  autocropper.vcproj
baseclasses/: baseclasses.sln
baseclasses/CoreAVCWrapper/: CoreAVCWrapper.sln
baseclasses/JM/jm18.6/: CHANGES.TXT  ldecod_vc9.vcproj  lencod_vc10.vcxproj
baseclasses/JM/jm18.6/lcommon/inc/: ifunctions.h
baseclasses/JM/jm18.6/ldecod/inc/: global.h
baseclasses/JM/jm18.6/ldecod/src/: image.c  ldecod.c  mbuffer.c
baseclasses/JM/jm18.6/lencod/inc/: configfile.h  global.h  params.h
baseclasses/JM/jm18.6/lencod/src/: configfile.c  conformance.c  image.c  lencod.c
baseclasses/mpls_tool/: mpls.sln  mpls.vcproj  parse_mpls.cpp  parse_mpls.h
components/CoreAVCWrapper/: CoreAVCWrapper.def  CoreAVCWrapper.vcproj  dllmain.cpp  stdafx.cpp
components/filmtester/: filmtester.vcproj
components/mpls_tool/: mpls_tool.vcproj
cropdetect/: cropdetect.cpp  cropdetect.vcxproj  cropdetect.vcxproj.filters
dump/: dump.cpp  dump.sln  dump.vcproj
filmtester/: filmtester.cpp
merge/: merge.cpp  merge.sln  merge.vcproj
ssifSource/: CMakeLists.txt  DumpFilter.cpp  Filter.Pipe.cpp  Filter.Pipe.hpp  Filter.mplsSource.cpp  Filter.mplsSource.hpp  Filter.mplsSource2.cpp  Filter.mplsSource2.hpp  Filter.ssifSource.cpp  Filter.ssifSource.hpp  Tools.AviSynth.cpp  Tools.AviSynth.hpp  Tools.DirectShow.cpp  Tools.DirectShow.hpp  Tools.Pipe.hpp  Tools.WinApi.cpp  Tools.WinApi.hpp  dllmain.cpp  mplsReader.c  mplsReader.h  resource.h  sample.avs  ssifSource.avs  ssifSource.rc  ssifSource.vcxproj  ssifSource.vcxproj.filters  stdafx.h
